# tde-extra-pkgbuilds

./: README.md
tde-extra-styles/tde-style-baghira/: PKGBUILD
tde-extra-styles/tde-style-ia-ora/: PKGBUILD
tde-extra-styles/tde-style-lipstik/: PKGBUILD
tde-twin-extra-styles/tde-twin-style-dekorator/: PKGBUILD  tde-twin-style-dekorator-14.0.12-1-x86_64.pkg.tar.zst  twin-style-dekorator-trinity-14.0.12.tar.xz
tde-twin-extra-styles/tde-twin-style-dekorator/pkg/tde-twin-style-dekorator/: .BUILDINFO  .MTREE  .PKGINFO
tde-twin-extra-styles/tde-twin-style-dekorator/pkg/tde-twin-style-dekorator/opt/trinity/lib/trinity/: twin_deKorator_config.la
tde-twin-extra-styles/tde-twin-style-dekorator/pkg/tde-twin-style-dekorator/opt/trinity/share/apps/twin/: deKorator.desktop
tde-twin-extra-styles/tde-twin-style-dekorator/src/: twin-style-dekorator-trinity-14.0.12.tar.xz
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/: .tdescminfo  CMakeL10n.txt  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  README  deKorator.kdevses  deKorator.tdevelop
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/client/: CMakeL10n.txt  CMakeLists.txt  deKoratorclient.cpp  deKoratorclient.h  shadow.cpp  shadow.h
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/client/config/: CMakeLists.txt  configdialog.ui  deKoratorconfig.cpp  deKoratorconfig.h  themes.cpp  themes.h
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/extra/: README  deKhelp.xhtml
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/themes/: CMakeLists.txt
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/translations/desktop_files/: twin-style-dekorator-desktops.pot
tde-twin-extra-styles/tde-twin-style-dekorator/src/twin-style-dekorator-trinity-14.0.12/translations/messages/: twin-style-dekorator.pot
tde-twin-extra-styles/tde-twin-style-suse2/: PKGBUILD
